# rust

./: README.md
db/: .env  Cargo.toml  db.sql  query.sql
db/src/: main.rs
flappy/src/: main.rs
lists/src/: first.rs  lib.rs  second.rs
minigrep/: output.txt
minigrep/src/: lib.rs  main.rs
webapi/: Cargo.toml
webapi/src/: main.rs
webapi/src/handlers/: weatherforecast.rs
webapi/src/models/: mod.rs  weatherforecast.rs
webserver/http/src/: httprequest.rs  httpresponse.rs
webserver/httpserver/: Cargo.toml
webserver/httpserver/data/: orders.json
webserver/httpserver/public/: 404.html  health.html  index.html
webserver/httpserver/src/: handler.rs  main.rs  router.rs  server.rs
webserver/tcpclient/src/: main.rs
webserver/tcpserver/src/: main.rs
ws/: db.sql
ws/webservice/: Cargo.toml
ws/webservice/src/: errors.rs  handlers.rs  models.rs  routers.rs  state.rs
ws/webservice/src/dbaccess/: course.rs  teacher.rs
ws/webservice/src/handlers/: course.rs  general.rs  teacher.rs
ws/webservice/src/models/: course.rs  teacher.rs
